force-app/main/default/objects/Insurer_Underlying_Insurer__c/Insurer_Underlying_Insurer__c.object-meta.xml
<CustomObject>
    <description>Used to capture related Insurer/Underlying of Quote/Policy</description>
    <label>Underlying Insurer</label>
    <nameField>
        <displayFormat>UI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underlying Insurers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>