force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Authorized_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Capacity__c</fullName>
    <inlineHelpText>Authorized capacity of underlying insurance</inlineHelpText>
    <label>Authorized Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>