force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Category of underlying insurance</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Followed Bond</fullName>
            </value>
            <value>
                <fullName>Primary Bond</fullName>
            </value>
            <value>
                <fullName>Excess Bond</fullName>
            </value>
            <value>
                <fullName>Primary Policy</fullName>
            </value>
            <value>
                <fullName>Excess Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>