force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Underlying Insurers</relationshipLabel>
    <relationshipName>Underlying_Insurers</relationshipName>
    <type>Lookup</type>
</CustomField>