force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Insurer_Category__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Category__c</fullName>
    <label>Insurer Category</label>
    <length>225</length>
    <type>Text</type>
</CustomField>