force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Insurer_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Percentage__c</fullName>
    <label>Insurer Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>