force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Limit_of_Liability__c.field-meta.xml
<CustomField>
    <fullName>Limit_of_Liability__c</fullName>
    <inlineHelpText>Underlying Insurance Limit of Liability</inlineHelpText>
    <label>Limit of Liability</label>
    <length>225</length>
    <type>Text</type>
</CustomField>