force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Limit_of_Liability_new__c.field-meta.xml
<CustomField>
    <fullName>Limit_of_Liability_new__c</fullName>
    <label>Limit of Liability 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>