force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rate__c</fullName>
    <inlineHelpText>Monthly rate underlying insurance</inlineHelpText>
    <label>Monthly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>