force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Policy associated with this underlying insurance</inlineHelpText>
    <label>Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipName>Insurer_Underlying_Insurers</relationshipName>
    <type>Lookup</type>
</CustomField>