force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <inlineHelpText>Unique Identifier of the policy</inlineHelpText>
    <label>Policy Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>