force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Policy_Term_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Term_Effective_Date__c</fullName>
    <inlineHelpText>Effective Date of underlying insurance</inlineHelpText>
    <label>Policy Term (Effective Date)</label>
    <type>Date</type>
</CustomField>