force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Policy_Term_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Term_Expiry_Date__c</fullName>
    <inlineHelpText>Date on which the underlying insurance will be closed</inlineHelpText>
    <label>Policy Term (Expiry Date)</label>
    <type>Date</type>
</CustomField>