force-app/main/default/objects/Insurer_Underlying_Insurer__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associate quote with this underlying insurance</inlineHelpText>
    <label>Quote</label>
    <referenceTo>Quote2__c</referenceTo>
    <relationshipName>Insurer_Underlying_Insurers</relationshipName>
    <type>Lookup</type>
</CustomField>