force-app/main/default/objects/Insurer_Underlying_Insurer__c/recordTypes/Underlying_Insurer_of_Policy.recordType-meta.xml
<RecordType>
    <fullName>Underlying_Insurer_of_Policy</fullName>
    <active>true</active>
    <description>Capture Underlying Insurer information of policy</description>
    <label>Underlying Insurer of Policy</label>
</RecordType>