force-app/main/default/objects/Insurer_Underlying_Insurer__c/recordTypes/Underlying_Insurer_of_Quote.recordType-meta.xml
<RecordType>
    <fullName>Underlying_Insurer_of_Quote</fullName>
    <active>true</active>
    <description>Capture Underlying Insurer information of quote</description>
    <label>Underlying Insurer of Quote</label>
</RecordType>