force-app/main/default/objects/Insurer_Underlying_Insurer__c/validationRules/policy_UI.validationRule-meta.xml
<ValidationRule>
    <fullName>policy_UI</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName ==&quot;Underlying_Insurer_of_Quote&quot;, 
Policy__r.RecordType.DeveloperName =&quot;Non_Program_Policy&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Underlying Insurer of Quote from Policy</errorMessage>
</ValidationRule>