force-app/main/default/objects/Insurer_Underlying_Insurer__c/validationRules/Quote_Underlying_Insurer.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Underlying_Insurer</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &quot;Underlying_Insurer_of_Policy&quot;, Quote__r.RecordType.DeveloperName ==&quot;Non_Program_Quote&quot;)</errorConditionFormula>
    <errorMessage>You cannot create a Underlying Insurer of Policy from Quote</errorMessage>
</ValidationRule>